<resources>
    <string name="app_name">Filet</string>
    <string name="films">Films</string>
    <string name="shows">Shows</string>
    <string name="my_filet">My Filet</string>
    <string name="film_calender">Film Calender</string>
    <string name="information">Information</string>
    <string name="location">Location</string>
    <string name="parking_location">Parking location</string>
    <string name="pt_information">PT Information</string>

    <string name="cinema_feedback">Cinema feedback</string>
    <string name="cinema_contact">Cinema contact</string>
    <string name="bus">Bus</string>
    <string name="bus_info">Bacon ipsum dolor amet fatback flank frankfurter shoulder biltong cow kevin, ham hock jerky strip steak burgdoggen capicola salami. Meatball ham andouille, doner tongue sausage boudin bresaola tail leberkas sirloin turducken pork loin fatback. Bresaola shankle landjaeger, jowl beef andouille fatback tail spare ribs filet mignon frankfurter ribeye salami ball tip. Beef ribs picanha ground round porchetta. Ribeye hamburger pastrami filet mignon tongue kielbasa. Pancetta tri-tip t-bone tail pork.\n
Drumstick tri-tip beef ribs, cow corned beef biltong ribeye boudin shoulder ball tip cupim ham hock ground round hamburger strip steak. Ball tip pork belly fatback strip steak burgdoggen. Pork chop spare ribs rump, ham capicola pork sirloin shank fatback. Meatball tri-tip meatloaf tenderloin ground round beef capicola jerky pork pastrami salami. Venison landjaeger tri-tip fatback sausage strip steak leberkas spare ribs. Pork belly landjaeger picanha burgdoggen ball tip pastrami leberkas biltong alcatra pancetta.</string>
    <string name="train">Train</string>
    <string name="train_info">Bacon ipsum dolor amet fatback flank frankfurter shoulder biltong cow kevin, ham hock jerky strip steak burgdoggen capicola salami. Meatball ham andouille, doner tongue sausage boudin bresaola tail leberkas sirloin turducken pork loin fatback. Bresaola shankle landjaeger, jowl beef andouille fatback tail spare ribs filet mignon frankfurter ribeye salami ball tip. Beef ribs picanha ground round porchetta. Ribeye hamburger pastrami filet mignon tongue kielbasa. Pancetta tri-tip t-bone tail pork.\n
Drumstick tri-tip beef ribs, cow corned beef biltong ribeye boudin shoulder ball tip cupim ham hock ground round hamburger strip steak. Ball tip pork belly fatback strip steak burgdoggen. Pork chop spare ribs rump, ham capicola pork sirloin shank fatback. Meatball tri-tip meatloaf tenderloin ground round beef capicola jerky pork pastrami salami. Venison landjaeger tri-tip fatback sausage strip steak leberkas spare ribs. Pork belly landjaeger picanha burgdoggen ball tip pastrami leberkas biltong alcatra pancetta.</string>
    <string name="subway">Metro</string>
    <string name="subway_info">Bacon ipsum dolor amet fatback flank frankfurter shoulder biltong cow kevin, ham hock jerky strip steak burgdoggen capicola salami. Meatball ham andouille, doner tongue sausage boudin bresaola tail leberkas sirloin turducken pork loin fatback. Bresaola shankle landjaeger, jowl beef andouille fatback tail spare ribs filet mignon frankfurter ribeye salami ball tip. Beef ribs picanha ground round porchetta. Ribeye hamburger pastrami filet mignon tongue kielbasa. Pancetta tri-tip t-bone tail pork.\n
Drumstick tri-tip beef ribs, cow corned beef biltong ribeye boudin shoulder ball tip cupim ham hock ground round hamburger strip steak. Ball tip pork belly fatback strip steak burgdoggen. Pork chop spare ribs rump, ham capicola pork sirloin shank fatback. Meatball tri-tip meatloaf tenderloin ground round beef capicola jerky pork pastrami salami. Venison landjaeger tri-tip fatback sausage strip steak leberkas spare ribs. Pork belly landjaeger picanha burgdoggen ball tip pastrami leberkas biltong alcatra pancetta.</string>
    <string name="language_menu">Language</string>
    <string name="feedback">Feedback</string>
    <string name="send">Send</string>
    <string name="name">Name:</string>
    <string name="feedback_write">Feedback:</string>
    <string name="review">Score:</string>
    <string name="review_write">Review:</string>
    <string name="writeReview">Write a review</string>
    <string name="contact">Contact</string>
    <string name="contact_info">Bacon ipsum dolor amet fatback flank frankfurter shoulder biltong cow kevin, ham hock jerky strip steak burgdoggen capicola salami. Meatball ham andouille, doner tongue sausage boudin bresaola tail leberkas sirloin turducken pork loin fatback. Bresaola shankle landjaeger, jowl beef andouille fatback tail spare ribs filet mignon frankfurter ribeye salami ball tip. Beef ribs picanha ground round porchetta. Ribeye hamburger pastrami filet mignon tongue kielbasa. Pancetta tri-tip t-bone tail pork.\n
Drumstick tri-tip beef ribs, cow corned beef biltong ribeye boudin shoulder ball tip cupim ham hock ground round hamburger strip steak. Ball tip pork belly fatback strip steak burgdoggen. Pork chop spare ribs rump, ham capicola pork sirloin shank fatback. Meatball tri-tip meatloaf tenderloin ground round beef capicola jerky pork pastrami salami. Venison landjaeger tri-tip fatback sausage strip steak leberkas spare ribs. Pork belly landjaeger picanha burgdoggen ball tip pastrami leberkas biltong alcatra pancetta.</string>
    <string name="select_seats">Select a seat</string>
    <string name="including_btw">(Including BTW)</string>
    <string name="total">Total:</string>
    <string name="buy_tickets">Buy tickets</string>
    <string name="my_tickets">My Tickets</string>
    <string name="my_ticket_details">Ticket Details</string>
    <string name="my_films">My Films</string>
    <string name="pay_tickets">Pay</string>
    <string name="seat_selected">Selected</string>
    <string name="seat_taken">Taken</string>
    <string name="seat_available">Available</string>
    <string name="amount">Amount: </string>
    <string name="seats">Seats: </string>

    <string name="time_tickets">Time &amp; Tickets</string>
    <string name="version">Version: </string>
    <string name="length">Length in min: </string>
    <string name="age">Age: </string>
    <string name="imdb">IMDB: </string>
    <string name="director">Director: </string>
    <string name="release">Release: </string>
    <string name="film_detail">Film Details</string>
    <string name="paypal">PayPal</string>
    <string name="ideal">iDEAL</string>
    <string name="creditcard">Creditcard</string>

    <string name="normal">Normal</string>
    <string name="child">Child</string>
    <string name="teen">Teen</string>
    <string name="senior">Senior</string>
    <string name="student">Student</string>
    <string name="glasses">3D glasses</string>

    <string-array name="filmDates">
        <item>06/04/2017</item>
        <item>07/04/2017</item>
        <item>08/04/2017</item>
        <item>09/04/2017</item>
        <item>10/04/2017</item>
        <item>11/04/2017</item>
        <item>12/04/2017</item>
    </string-array>
    <string name="actors">Actors:</string>
    <string name="minutes">minutes</string>


    <string name="not_yet_rated">Not yet rated</string>
</resources>
