<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.filet.bioscoopfilet.PresentationApplicationLogicLayer.InformationActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeFilet"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:onClick="locationButton"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@drawable/border">

        <LinearLayout
            android:layout_weight="8"
            android:layout_width="0dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textStyle="bold"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/locationAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cor Kieboomplein 501"/>
            <TextView
                android:id="@+id/locationCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rotterdam"/>
            <TextView
                android:id="@+id/locationZipCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3077 MK"/>
        </LinearLayout>

        <ImageView
            android:layout_weight="1"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_location_on"/>

    </LinearLayout>

    <LinearLayout
        android:onClick="parkingButton"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@drawable/border">

        <LinearLayout
            android:layout_weight="8"
            android:layout_width="0dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parking_location"
                android:textSize="18dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/parkingAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Van Zandvlietplein 1" />

            <TextView
                android:id="@+id/parkingCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rotterdam"/>
            <TextView
                android:id="@+id/parkingZipCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3077 AA"/>
        </LinearLayout>

        <ImageView
            android:layout_weight="1"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_directions_car"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/border"
        android:onClick="ptInformationButton">

        <LinearLayout
            android:layout_weight="8"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="24dp"
                android:textStyle="bold"
                android:text="@string/pt_information"/>
        </LinearLayout>

        <ImageView
            android:layout_weight="1"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_directions_bus"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/border"
        android:onClick="feedbackButton">

        <LinearLayout
            android:layout_weight="8"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="24dp"
                android:textStyle="bold"
                android:text="@string/cinema_feedback"/>
        </LinearLayout>

        <ImageView
            android:layout_weight="1"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_create"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/border"
        android:onClick="contactButton">

        <LinearLayout
            android:layout_weight="8"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="24dp"
                android:textStyle="bold"
                android:text="@string/cinema_contact"/>
        </LinearLayout>

        <ImageView
            android:layout_weight="1"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_forum"/>

    </LinearLayout>

</LinearLayout>
