<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/ThemeFilet"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:onClick="filmButton">

                    <ImageView
                        android:id="@+id/MovieImage"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_movie_creation" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/MovieImage"
                        android:layout_centerHorizontal="true"
                        android:text="@string/films"
                        android:textColor="@color/primary_text_material_dark"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:onClick="myButton">

                    <ImageView
                        android:id="@+id/MyFiletImage"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_person" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/MyFiletImage"
                        android:layout_centerHorizontal="true"
                        android:text="@string/my_filet"
                        android:textColor="@color/primary_text_material_dark"
                        android:textStyle="bold" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:onClick="agendaButton">

                    <ImageView
                        android:id="@+id/CalenderImage"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_insert_invitation" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/CalenderImage"
                        android:layout_centerHorizontal="true"
                        android:text="@string/film_calender"
                        android:textColor="@color/primary_text_material_dark"
                        android:textStyle="bold" />/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:onClick="informationButton">

                    <ImageView
                        android:id="@+id/InformationImage"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_info" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/InformationImage"
                        android:layout_centerHorizontal="true"
                        android:text="@string/information"
                        android:textColor="@color/primary_text_material_dark"
                        android:textStyle="bold" />/>
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/splashScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/loading_screen" />

        </RelativeLayout>

    </FrameLayout>

</LinearLayout>
