<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.filet.bioscoopfilet.PresentationApplicationLogicLayer.PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_text_material_dark"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/payTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Film titel"
                android:textColor="@android:color/black"
                android:textSize="32dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/payVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Version"
                android:textSize="24dp"
                android:textColor="@android:color/black"
                android:layout_below="@+id/payTitle"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/payDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/payVersion"
                android:text="Datum en tijd"
                android:textSize="24dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/payTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/payDateTime"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="Totaal: €27,00"
                android:textSize="24dp"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/payDateTime"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@id/payTotalPrice"
                android:text="@string/including_btw"
                android:textColor="@android:color/black"
                android:textSize="16dp"
                android:translationY="5dp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:padding="8dp"
            android:tag="@string/paypal"
            android:onClick="payTickets">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/paypal"
                android:textSize="32dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_paypal_logo" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:padding="8dp"
            android:tag="@string/ideal"
            android:onClick="payTickets">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/ideal"
                android:textSize="32dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_ideal_betalen" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:padding="8dp"
            android:tag="@string/creditcard"
            android:onClick="payTickets">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/creditcard"
                android:textSize="32dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_credit_card" />
        </RelativeLayout>


    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeFilet"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


</LinearLayout>